argoCD-yaml/4200-svc-dokjongban-jen-react.yaml
apiVersion: v1
kind: Service
metadata:
  name: dokjongban-jen-react-service
  namespace: default
  labels:
    domain: dokjongban-com
    app: dokjongban-jen-react
    app.kubernetes.io/managed-by: argocd
    app.kubernetes.io/instance: dokjongban-jen-react
  annotations:
    argocd.argoproj.io/sync-wave: "1"
    # ▼ Argo CD가 이 Service의 selector 차이를 무시하도록 지정
    argocd.argoproj.io/ignore-differences: |
      jsonPointers:
      - /spec/selector
spec:
  type: ClusterIP
  selector:
    app: dokjongban-jen-react
  ports:
    - name: http
      port: 80
      targetPort: 80
