argoCD-yaml/4201-svc-dokjongban-jen-react-preview.yaml
# 4201-svc-dokjongban-jen-react-preview.yaml
apiVersion: v1
kind: Service
metadata:
  name: dokjongban-jen-react-preview
  namespace: default
  labels:
    domain: dokjongban-com
    app: dokjongban-jen-react
    app.kubernetes.io/managed-by: argocd
    app.kubernetes.io/instance: dokjongban-jen-react
  annotations:
    # 서비스가 먼저 생성되도록(ingress wave=0, svc wave=1, rollout wave=2)
    argocd.argoproj.io/sync-wave: "1"
spec:
  type: ClusterIP
  selector:
    # Rollouts가 프리뷰/액티브로 이 selector를 기준으로 RS를 전환합니다.
    app: dokjongban-jen-react
  ports:
    - name: http
      port: 80
      targetPort: 80
